--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
-
+#name, #year{
+	border: 2px solid #d5d5d5;
+	height: 24px;
+	background: #eeeeee;
+}
+#button{
+	border: 2px solid #d5d5d5;
+	border-radius: 3px;
+	height: 28px;
+	width: 4.5rem;
+}
